force-app/main/default/objects/Opportunity/fields/OW_lender__c.field-meta.xml
<CustomField>
    <fullName>OW_lender__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The lender for the customer&#39;s existing mortgage.</description>
    <label>Lender</label>
    <referenceTo>Public_Provider_Names__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>