force-app/main/default/objects/Opportunity/fields/OW_mortgage_rate_expiration__c.field-meta.xml
<CustomField>
    <fullName>OW_mortgage_rate_expiration__c</fullName>
    <description>This field captures the date on which a customer&apos;s existing mortgage fixed rate expires. This will generally be captured as part of the web form filled out by leads but can be modified throughout the process, particularly if more accurate values are established.</description>
    <label>Mortgage rate expiration</label>
    <type>Date</type>
</CustomField>