force-app/main/default/objects/Opportunity/fields/OW_mortgage_term__c.field-meta.xml
<CustomField>
    <fullName>OW_mortgage_term__c</fullName>
    <label>Mortgage term</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>