force-app/main/default/objects/Opportunity/fields/OW_mortgage_type__c.field-meta.xml
<CustomField>
    <fullName>OW_mortgage_type__c</fullName>
    <label>Mortgage type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Remortgage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>