force-app/main/default/objects/Opportunity/fields/OW_property_use__c.field-meta.xml
<CustomField>
    <fullName>OW_property_use__c</fullName>
    <label>Property use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>