force-app/main/default/objects/Opportunity/fields/OW_rent_pm__c.field-meta.xml
<CustomField>
    <fullName>OW_rent_pm__c</fullName>
    <label>Rent (pm)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>