force-app/main/default/objects/Opportunity/fields/OW_repayment_terms__c.field-meta.xml
<CustomField>
    <fullName>OW_repayment_terms__c</fullName>
    <label>Repayment terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Repayment</fullName>
            </value>
            <value>
                <fullName>Interest only</fullName>
            </value>
            <value>
                <fullName>Investment backed</fullName>
            </value>
            <value>
                <fullName>Part and part</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>