force-app/main/default/objects/Opportunity/fields/PersonalisedLifelineReason__c.field-meta.xml
<CustomField>
    <fullName>PersonalisedLifelineReason__c</fullName>
    <description>Record reasons why the client has requested a personalised lifeline and detailed requirements</description>
    <label>Personalised lifeline reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>