force-app/main/default/objects/Opportunity/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <formula>Account.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This email is pulled through from the related Person Account. It can only be edited on the Person Account page.</inlineHelpText>
    <label>Primary Email</label>
    <type>Text</type>
</CustomField>