force-app/main/default/objects/Opportunity/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <description>Pulls the phone number from the account assigned to the opportunity</description>
    <formula>IF(ISBLANK(Account.FinServ__PrimaryContact__r.Phone),Account.FinServ__PrimaryContact__r.MobilePhone,Account.FinServ__PrimaryContact__r.Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is pulled from the account above</inlineHelpText>
    <label>Primary Phone</label>
    <type>Text</type>
</CustomField>