force-app/main/default/objects/Opportunity/fields/Qualification_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Confirmation__c</fullName>
    <label>Qualification Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>