force-app/main/default/objects/Opportunity/fields/Questionnaire_Status__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Status__c</fullName>
    <formula>IF(
ISPICKVAL( Household_Account__r.Fact_Find_Type__c ,&quot;&quot;),

TEXT(Fact_Find__r.FF_Status__c), 

TEXT( Household_Account__r.Profile_Status__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Questionnaire Status</label>
    <type>Text</type>
</CustomField>