force-app/main/default/objects/Opportunity/fields/Questionnaire_URL__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_URL__c</fullName>
    <formula>Fact_Find__r.FF_Questionnaire_link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Questionnaire URL</label>
    <type>Text</type>
</CustomField>