force-app/main/default/objects/Opportunity/fields/Scope_of_Advice_URL__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Advice_URL__c</fullName>
    <inlineHelpText>Add the link to the G-Drive document here</inlineHelpText>
    <label>Scope of Advice URL</label>
    <type>Url</type>
</CustomField>