force-app/main/default/objects/Opportunity/fields/Scope_Sent_to_Scope_Signed__c.field-meta.xml
<CustomField>
    <fullName>Scope_Sent_to_Scope_Signed__c</fullName>
    <formula>CEILING(
 (DATETIMEVALUE(Date_scope_of_advice_accepted__c) -   DATETIMEVALUE( Date_scope_of_advice_sent__c ))  /7
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope Sent to Scope Signed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>