force-app/main/default/objects/Opportunity/fields/Soft_facts__c.field-meta.xml
<CustomField>
    <fullName>Soft_facts__c</fullName>
    <label>Soft facts</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>