force-app/main/default/objects/Opportunity/fields/Started_Sign_up__c.field-meta.xml
<CustomField>
    <fullName>Started_Sign_up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Funnel Report</description>
    <label>Started Sign-up</label>
    <type>Checkbox</type>
</CustomField>