force-app/main/default/objects/Opportunity/fields/Three_questions_client2__c.field-meta.xml
<CustomField>
    <fullName>Three_questions_client2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To record which client on household is client 2. The 3 questions linked to client 2 were answered by this person</description>
    <label>Client 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Three questions answers</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>