force-app/main/default/objects/Opportunity/fields/Weeks_to_Meeting_Held__c.field-meta.xml
<CustomField>
    <fullName>Weeks_to_Meeting_Held__c</fullName>
    <formula>CEILING( 
(Discovery_Meeting_Date_Time__c -  Account.Lead_Created_Date__c)/
7
)</formula>
    <label>Lead Created &gt; Meeting Held (wks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>