force-app/main/default/objects/Opportunity/fields/What_are_they_looking_for__c.field-meta.xml
<CustomField>
    <fullName>What_are_they_looking_for__c</fullName>
    <description>Free text to describe what a client is looking for</description>
    <label>What are they looking for?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>