force-app/main/default/objects/Opportunity/fields/X3_Questions_Completed__c.field-meta.xml
<CustomField>
    <fullName>X3_Questions_Completed__c</fullName>
    <label>3 Questions Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>