force-app/main/default/objects/Opportunity/recordTypes/Advice_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Advice_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Octopus Wealth</businessProcess>
    <description>Use where we will do a disco for a potential advice client</description>
    <label>Advice | Discovery</label>
</RecordType>