force-app/main/default/objects/Opportunity/recordTypes/AdviceFastTrack.recordType-meta.xml
<RecordType>
    <fullName>AdviceFastTrack</fullName>
    <active>true</active>
    <businessProcess>Fast Track</businessProcess>
    <description>Use where we are able to bypass the discovery process when signing a client up.</description>
    <label>Advice | Fast Track</label>
</RecordType>