force-app/main/default/objects/Opportunity/recordTypes/FinServ__WalletShareOpportunity.recordType-meta.xml
<RecordType>
    <fullName>FinServ__WalletShareOpportunity</fullName>
    <active>true</active>
    <businessProcess>FinServ__Wallet Share</businessProcess>
    <label>Opportunity (Wallet Share)</label>
</RecordType>