force-app/main/default/objects/Opportunity/recordTypes/OW_acquisition.recordType-meta.xml
<RecordType>
    <fullName>OW_acquisition</fullName>
    <active>false</active>
    <businessProcess>Octopus Wealth</businessProcess>
    <description>Opportunities for customer acquisition should use this record type.</description>
    <label>Acquisition</label>
</RecordType>