force-app/main/default/objects/Opportunity/recordTypes/OW_mortgage.recordType-meta.xml
<RecordType>
    <fullName>OW_mortgage</fullName>
    <active>true</active>
    <businessProcess>Mortgage</businessProcess>
    <description>Opportunity to broker a mortgage for this customer.</description>
    <label>Mortgage</label>
</RecordType>