force-app/main/default/objects/Opportunity/recordTypes/TrustAdvice.recordType-meta.xml
<RecordType>
    <fullName>TrustAdvice</fullName>
    <active>true</active>
    <businessProcess>Trust</businessProcess>
    <description>For sales to trust clients.</description>
    <label>Trust | Advice</label>
</RecordType>