force-app/main/default/objects/Opportunity/validationRules/AccountMustBeHousehold.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountMustBeHousehold</fullName>
    <active>true</active>
    <description>Ensures that the opportunity account is always a household.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
CASESAFEID(Account.RecordTypeId) =  $CustomMetadata.OW_record_type_reference__mdt.OW_opportunity_advice.OW_record_type_id__c</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>The account must be a household.</errorMessage>
</ValidationRule>