force-app/main/default/objects/Opportunity/validationRules/CantSignScopeWhenLost.validationRule-meta.xml
<ValidationRule>
    <fullName>CantSignScopeWhenLost</fullName>
    <active>true</active>
    <description>Prevents signing scope after client has already been lost</description>
    <errorConditionFormula>Date_scope_of_advice_accepted__c &gt;  DATEVALUE(Lost_Date__c )
&amp;&amp;
NOT(ISNULL(Date_scope_of_advice_accepted__c))
&amp;&amp;
NOT(ISNULL(Lost_Date__c ))</errorConditionFormula>
    <errorMessage>You cannot sign scope for a lost opportunity.</errorMessage>
</ValidationRule>