force-app/main/default/objects/Opportunity/validationRules/ClosedReasonRequiredMortgage.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedReasonRequiredMortgage</fullName>
    <active>true</active>
    <description>Ensures that a number of fields are populated prior to progressing past the initial mortgage opportunity stage.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
RecordType.DeveloperName = &quot;OW_mortgage&quot;
&amp;&amp; 
IsClosed = TRUE
&amp;&amp; 
IsWon = FALSE
&amp;&amp; 
ISBLANK( TEXT( OW_closed_reason__c ) )</errorConditionFormula>
    <errorDisplayField>OW_closed_reason__c</errorDisplayField>
    <errorMessage>When losing an opportunity, a closed reason must be provided.</errorMessage>
</ValidationRule>