force-app/main/default/objects/Opportunity/validationRules/DateScopeSentMustBeAfterDiscoveryMeeting.validationRule-meta.xml
<ValidationRule>
    <fullName>DateScopeSentMustBeAfterDiscoveryMeeting</fullName>
    <active>true</active>
    <description>Prevents scope being sent before the discovery meeting has occurred.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
RecordType.DeveloperName = &quot;Advice_Opportunity&quot;
&amp;&amp;
NOT(ISNULL(Date_scope_of_advice_sent__c ))
&amp;&amp;
(Date_scope_of_advice_sent__c &lt; DATEVALUE(Discovery_Meeting_Date_Time__c)
||
ISBLANK(Discovery_Meeting_Date_Time__c))</errorConditionFormula>
    <errorDisplayField>Date_scope_of_advice_sent__c</errorDisplayField>
    <errorMessage>You cannot mark scope as signed or sent before the discovery meeting has occurred.</errorMessage>
</ValidationRule>