force-app/main/default/objects/Opportunity/validationRules/DiscoveryDeckPlannerMustAssign.validationRule-meta.xml
<ValidationRule>
    <fullName>DiscoveryDeckPlannerMustAssign</fullName>
    <active>true</active>
    <description>Warning to sign a planner to the discovery deck before starting the build</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c &amp;&amp;
RecordType.DeveloperName = &quot;Advice_Opportunity&quot; &amp;&amp; 
ISBLANK(Discovery_Deck_Planner__c) &amp;&amp;
NOT(ISPICKVAL(Discovery_Deck_Status__c , &quot;Create Base Line&quot;)) &amp;&amp;
NOT(ISPICKVAL(Discovery_Deck_Status__c , &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Discovery_Deck_Planner__c</errorDisplayField>
    <errorMessage>You need to Assign a Discovery Deck Planner before starting.</errorMessage>
</ValidationRule>