force-app/main/default/objects/Opportunity/validationRules/NewOppHouseholdMustBeWithdrawn.validationRule-meta.xml
<ValidationRule>
    <fullName>NewOppHouseholdMustBeWithdrawn</fullName>
    <active>true</active>
    <description>To create a new advice opportunity, the household must be in a status of withdrawn.</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Advice_Opportunity&quot;
&amp;&amp;
ISNEW() 
&amp;&amp;
NOT(ISPICKVAL( Account.FinServ__Status__c, &quot;Withdrawn&quot; ))
&amp;&amp;
NOT(ISPICKVAL(LeadSource, &quot;Child of client - referred&quot;))
&amp;&amp;
ISBLANK( Date_Converted__c )
&amp;&amp;
$User.Username &lt;&gt; &quot;cian@octopuswealth.com&quot;</errorConditionFormula>
    <errorMessage>You can only create a new advice opportunity when the household is withdrawn.</errorMessage>
</ValidationRule>