force-app/main/default/objects/Opportunity/validationRules/NewOppMustBeBookDiscovery.validationRule-meta.xml
<ValidationRule>
    <fullName>NewOppMustBeBookDiscovery</fullName>
    <active>true</active>
    <description>New opportunities must be in a status of &apos;Book discovery&apos; when created</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
RecordType.DeveloperName = &quot;Advice_Opportunity&quot;
&amp;&amp;
ISNEW()
&amp;&amp;
NOT(ISPICKVAL( StageName, &quot;Book discovery&quot; ))</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>When creating an advice opportunity, you must do so in the book discovery stage.</errorMessage>
</ValidationRule>