force-app/main/default/objects/Opportunity/validationRules/NoReturnOnceMeetingOccurred.validationRule-meta.xml
<ValidationRule>
    <fullName>NoReturnOnceMeetingOccurred</fullName>
    <active>true</active>
    <description>Prevents moving back a stage once disco has been prevented</description>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE( StageName ), &quot;Await decision&quot; )
&amp;&amp;
( ISPICKVAL( StageName, &quot;Book discovery&quot; ) ||
ISPICKVAL( StageName, &quot;Present discovery&quot; ))
&amp;&amp;
RecordType.DeveloperName = &quot;Advice_Opportunity&quot;</errorConditionFormula>
    <errorMessage>You cannot go backwards in stages.</errorMessage>
</ValidationRule>