force-app/main/default/objects/Opportunity/validationRules/OW_await_decision_meeting_held.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_await_decision_meeting_held</fullName>
    <active>true</active>
    <description>Ensures that the stage can only be moved to await decision after the disco has taken place.</description>
    <errorConditionFormula>Discovery_Meeting_Date_Time__c &gt; NOW()
&amp;&amp;
ISPICKVAL(StageName,&quot;Await decision&quot;)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>The discovery meeting must be recorded and have taken place to move to the await decision stage.</errorMessage>
</ValidationRule>