force-app/main/default/objects/Opportunity/validationRules/OW_mortgage_closed_lost_required.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_mortgage_closed_lost_required</fullName>
    <active>true</active>
    <description>Ensures that a number of fields are populated prior to progressing past the initial mortgage opportunity stage.</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;OW_mortgage&quot;

&amp;&amp; 

IsClosed = TRUE

&amp;&amp; 

IsWon = FALSE

&amp;&amp; 

ISBLANK( TEXT( OW_closed_reason__c ) )</errorConditionFormula>
    <errorDisplayField>OW_closed_reason__c</errorDisplayField>
    <errorMessage>When losing an opportunity, a closed reason must be provided.</errorMessage>
</ValidationRule>