force-app/main/default/objects/Opportunity/validationRules/OW_mortgage_required_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_mortgage_required_fields</fullName>
    <active>true</active>
    <description>Ensures that a number of fields are populated prior to progressing past the initial mortgage opportunity stage.</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;OW_mortgage&quot;

&amp;&amp; 

( ISPICKVAL( StageName, &quot;Provide advice&quot; ) 
||
ISPICKVAL( StageName, &quot;Broker mortgage&quot; ) 
||
ISPICKVAL( StageName, &quot;Await completion&quot; )
||
ISPICKVAL( StageName, &quot;Completed&quot; ) )

&amp;&amp; 

( ISBLANK( OW_date_precise_fp_fact_find_sent__c )
||
ISBLANK( Amount )
||
ISBLANK( CloseDate )
||
ISBLANK( OW_date_of_initial_interest__c ) )</errorConditionFormula>
    <errorMessage>To proceed, please ensure you have specified the following fields: amount, close date, date PreciseFP fact find sent, date of initial interest.</errorMessage>
</ValidationRule>