force-app/main/default/objects/Opportunity/validationRules/RecordTypeFastTrackMustHaveReason.validationRule-meta.xml
<ValidationRule>
    <fullName>RecordTypeFastTrackMustHaveReason</fullName>
    <active>true</active>
    <description>Ensures that if we are creating a fast track advice opportunity, a reason for this is captured.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
RecordType.DeveloperName = &quot;AdviceFastTrack&quot;
&amp;&amp;
ISPICKVAL( FastTrackReason__c, &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>FastTrackReason__c</errorDisplayField>
    <errorMessage>To create a fast track opportunity, a reason and approval for this must be provided in advance.</errorMessage>
</ValidationRule>