force-app/main/default/objects/Opportunity/validationRules/ScopeSignedCriteria.validationRule-meta.xml
<ValidationRule>
    <fullName>ScopeSignedCriteria</fullName>
    <active>true</active>
    <description>Ensures that before an opportunity can be moved to awaiting terms, we must have a date when scope of advice was accepted and a medium of scope acceptance. Applies to advice opportunities only.</description>
    <errorConditionFormula>ISPICKVAL( StageName,&quot;Await terms&quot; )
&amp;&amp;
(ISBLANK( Date_scope_of_advice_accepted__c )
||
ISPICKVAL( Medium_of_Scope_Acceptance__c ,&quot;&quot; ))
&amp;&amp;
RecordType.DeveloperName = &quot;Advice_Opportunity&quot;</errorConditionFormula>
    <errorMessage>Please complete the &#39;Scope of Advice&#39; section before moving to await terms.</errorMessage>
</ValidationRule>