force-app/main/default/objects/Opportunity/validationRules/ScopeSignedVulnerabilityRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ScopeSignedVulnerabilityRequired</fullName>
    <active>true</active>
    <description>Ensures that vulnerability has been recorded for all clients in the household prior to the opportunity being marked as scope signed. Applied to advice opportunities only.</description>
    <errorConditionFormula>NOT(Client_Vulnerability_Updated__c)
&amp;&amp;
ISPICKVAL(StageName, &#39;Await terms&#39;)
&amp;&amp;
( RecordType.DeveloperName = &quot;Advice_Opportunity&quot; ||
RecordType.DeveloperName = &quot;AdviceFastTrack&quot; )</errorConditionFormula>
    <errorMessage>You must update vulnerability before you can mark scope as signed.</errorMessage>
</ValidationRule>