force-app/main/default/objects/Opportunity/validationRules/StageAwaitDecisionDiscoRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>StageAwaitDecisionDiscoRequired</fullName>
    <active>true</active>
    <description>Ensures that if the opportunity is in a status of await decision, a discovery meeting date/time must have been recorded.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
RecordType.DeveloperName = &quot;Advice_Opportunity&quot;
&amp;&amp;
ISPICKVAL(StageName, &quot;Await Decision&quot;)
&amp;&amp;
ISBLANK(Discovery_Meeting_Date_Time__c)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>A disco needs to be recorded before you can move to await decision.</errorMessage>
</ValidationRule>