force-app/main/default/objects/Opportunity/validationRules/StageAwaitTermConflictOfInterestRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>StageAwaitTermConflictOfInterestRequired</fullName>
    <active>true</active>
    <description>Ensures that conflict of interest has been recorded for all clients in the household prior to the opportunity being marked as scope signed. Applies to advice opportunities only.</description>
    <errorConditionFormula>NOT(ConflictOfInterestAssessed__c)
&amp;&amp;
ISPICKVAL(StageName, &apos;Await Terms&apos;)
&amp;&amp;
( RecordType.DeveloperName = &quot;Advice_Opportunity&quot; ||
RecordType.DeveloperName = &quot;AdviceFastTrack&quot; )</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>You must specify if this client has a conflict of interest (using Add Conflict of Interest button on top right) before you can mark scope as signed.</errorMessage>
</ValidationRule>