force-app/main/default/objects/Opportunity/validationRules/StageAwaitTermsVulnerabilityRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>StageAwaitTermsVulnerabilityRequired</fullName>
    <active>true</active>
    <description>Ensures that vulnerability has been recorded for all clients in the household prior to the opportunity being marked as scope signed. Applied to advice opportunities only.</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
NOT(Client_Vulnerability_Updated__c)
&amp;&amp;
ISPICKVAL(StageName, &apos;Await terms&apos;)
&amp;&amp;
( RecordType.DeveloperName = &quot;Advice_Opportunity&quot; ||
RecordType.DeveloperName = &quot;AdviceFastTrack&quot; )</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>You must update vulnerability before you can mark scope as signed.</errorMessage>
</ValidationRule>