force-app/main/default/objects/Opportunity/validationRules/StageCannotGoBackOnceMeetingOccurrs.validationRule-meta.xml
<ValidationRule>
    <fullName>StageCannotGoBackOnceMeetingOccurrs</fullName>
    <active>true</active>
    <description>Prevents moving back a stage once disco has been presented</description>
    <errorConditionFormula>!$Setup.SystemConfiguration__c.ValidationBypass__c
&amp;&amp;
ISPICKVAL(PRIORVALUE( StageName ), &quot;Await decision&quot; )
&amp;&amp;
( ISPICKVAL( StageName, &quot;Book discovery&quot; ) ||
ISPICKVAL( StageName, &quot;Present discovery&quot; ))
&amp;&amp;
RecordType.DeveloperName = &quot;Advice_Opportunity&quot;</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>You cannot go backwards in stages.</errorMessage>
</ValidationRule>